kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-param-app
  namespace: app
  labels:
    app: query-param-app
spec:
  selector:
    app: query-param-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
